a user recieves an email when their account is suspended or activated